--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
 		#title {
 		  float:left;
 		}
+		
+		.twitter {
+			float:left;
+		}
 	</style>
 </head>
 <body>
@@ -36,27 +40,36 @@
     <!--Horizontal Tab-->
     <div id="horizontalTab">
         <ul>
-            <li><a href="#tab-1">Grote incidenten</a></li>
-            <li><a href="#tab-2">NU.nl</a></li>
-            <li><a href="#tab-3">P2000 kaart</a></li>
+            <li><a href="#tab-1">Twitter</a></li>
+            <li><a href="#tab-2">P2000 kaart</a></li>
+            <li><a href="#tab-3">Bron</a></li>
             <li><a href="#tab-4">Bron</a></li>
             <li><a href="#tab-5">Bron</a></li>
+            <li><a href="#tab-6">Bron</a></li>
+            <li><a href="#tab-7">Bron</a></li>
+            <li><a href="#tab-8">Bron</a></li>
         </ul>
 
         <div id="tab-1">
-          <a class="twitter-timeline" href="https://twitter.com/groteincidenten" data-widget-id="456383502380834816">Tweets by @groteincidenten</a>
-		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.			id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-
-  
+        	<div class="twitter">
+          <a class="twitter-timeline" height="740" width="520" href="https://twitter.com/groteincidenten" data-widget-id="456383502380834816">Tweets by @groteincidenten</a>
+		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.				id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+			</div>
+            <div class="twitter">
+        <a class="twitter-timeline" height="740" width="520" href="https://twitter.com/NUnl" data-widget-id="456385128369901568">Tweets by @NUnl</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+  			</div>
+            <div class="twitter">
+            	<a class="twitter-timeline" height="740" width="520" href="https://twitter.com/RodeKruis" data-widget-id="456421807545778176">Tweets by @RodeKruis</a>
+				<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);	js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+            </div>
+            <div style="clear:both;"></div>
         </div>
         <div id="tab-2">
-            <a class="twitter-timeline" href="https://twitter.com/NUnl" data-widget-id="456385128369901568">Tweets by @NUnl</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-
-
+			<iframe id="iframe" src="http://p2000kaart.nl/" border="0" width="100%" height="740"></iframe>
         </div>
       <div id="tab-3">
-            <iframe id="iframe" src="http://p2000kaart.nl/" border="0" width="100%" height="800"></iframe>
+            
         </div>
         <div id="tab-4">
             
@@ -89,7 +102,7 @@
                 startCollapsed: 'accordion',
                 collapsible: 'accordion',
                 setHash: true,
-                disabled: [3,4],
+                disabled: [2,3,4,5,6,7],
 				rotationTime: 15000,
             });
 
