--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
      		<iframe id="iframe" src="http://rodekruis.github.io/map/"></iframe>            
         </div>
         <div id="tab-4">
-            
+            <iframe id="iframe" src="http://www.p2kflex.nl"></iframe>   
         </div>
         <div id="tab-5">
             
@@ -113,7 +113,7 @@
                 startCollapsed: 'accordion',
                 collapsible: 'accordion',
                 setHash: true,
-                disabled: [3,4,5,6,7],
+                disabled: [4,5,6,7],
 				rotationTime: 15000,
             });
 
