Change tab name

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         <ul>
             <li><a href="#tab-1">Twitter</a></li>
             <li><a href="#tab-2">P2000 kaart</a></li>
-            <li><a href="#tab-3">Kwetsbare locaties</a></li>
-            <li><a href="#tab-4">Bron</a></li>
+            <li><a href="#tab-3">P2000 lijst</a></li>
+            <li><a href="#tab-4">Kwetsbare locaties</a></li>
             <li><a href="#tab-5">Bron</a></li>
             <li><a href="#tab-6">Bron</a></li>
             <li><a href="#tab-7">Bron</a></li>
@@ -77,10 +77,10 @@
 			<iframe id="iframe" src="http://p2000kaart.nl/"></iframe>
         </div>
       <div id="tab-3">
-     		<iframe id="iframe" src="http://rodekruis.github.io/map/"></iframe>            
+     		</iframe><iframe id="iframe" src="http://www.p2kflex.nl"></iframe>               
         </div>
         <div id="tab-4">
-            <iframe id="iframe" src="http://www.p2kflex.nl"></iframe>   
+            <iframe id="iframe" src="http://rodekruis.github.io/map/">
         </div>
         <div id="tab-5">
             
