--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
 			<iframe id="iframe" src="http://p2000kaart.nl/"></iframe>
         </div>
       <div id="tab-3">
-     		</iframe><iframe id="iframe" src="http://www.p2kflex.nl"></iframe>               
+     		<iframe id="iframe" src="http://www.p2kflex.nl"></iframe>               
         </div>
         <div id="tab-4">
-            <iframe id="iframe" src="http://rodekruis.github.io/map/">
+            <iframe id="iframe" src="http://rodekruis.github.io/map/"></iframe>
         </div>
         <div id="tab-5">
             
