--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
             <li><a href="#tab-2">P2000 kaart</a></li>
             <li><a href="#tab-3">P2000 lijst</a></li>
             <li><a href="#tab-4">Kwetsbare locaties</a></li>
-            <li><a href="#tab-5">Bron</a></li>
-            <li><a href="#tab-6">Bron</a></li>
-            <li><a href="#tab-7">Bron</a></li>
-            <li><a href="#tab-8">Bron</a></li>
+            <li><a href="#tab-5">Yammer</a></li>
+            <li><a href="#tab-6">Weerkaart</a></li>
+            <li><a href="#tab-7">Wind</a></li>
+            <li><a href="#tab-8">Regen</a></li>
         </ul>
 
         <div id="tab-1">
@@ -83,11 +83,31 @@
             <iframe id="iframe" src="http://rodekruis.github.io/map/"></iframe>
         </div>
         <div id="tab-5">
-            
+            <div id="embedded-feed" style="height:500px;width:1000px;"></div>
+		<script src="https://assets.yammer.com/assets/platform_embed.js"></script>
+		<script> yam.connect.embedFeed({
+		container: "#embedded-feed",
+		network: "rodekruis.nl",
+		feedType: "group",
+		feedId: "4258881"});
+		</script>
+        </div>
+        <div id="tab-6">
+            <img border="0" src="http://www.buienradar.nl/images.aspx?jaar=-3&soort=sp-loop" height="400">
+	    <img src="http://www.buienradar.nl/image/?type=weathermap-large&fn=wind.000001.png&extension=png" height="400" border="0">
+            <img src="http://www.buienradar.nl/image/?type=weathermap-large&fn=temperatuur.000001.png&extension=png" height="400" border="0">
+
+	    <img src="http://www.knmi.nl/waarschuwingen_en_verwachtingen/images/knmi_web_weersverwachting.png" alt="weersverwachting" title="weersverwachting" border="0" width="220">
+	    <img src="http://www.knmi.nl/waarschuwingen_en_verwachtingen/images/weeralarm_info.gif" alt="Waarschuwing voor Extreem weer of Weeralarm!" title="Waarschuwing voor Extreem weer of Weeralarm!" border="0" width="220">
+    </div>
+        <div id="tab-7">
+            <iframe id="iframe" src="http://earth.nullschool.net/#current/wind/surface/level/orthographic=-350.53,51.13,3000"></iframe>
         </div>
 
-    </div>
+<div id="tab-8">
+<iframe id="iframe" src="http://openweathermap.org/help/tiles.html?opacity=0.8&l=precipitation&lat=52&lon=6.65&zoom=7"></iframe>
 
+</div>
     
         <div id="navigation">
     	<button id="start-rotation">Start rotatie</button> 
@@ -113,7 +133,7 @@
                 startCollapsed: 'accordion',
                 collapsible: 'accordion',
                 setHash: true,
-                disabled: [4,5,6,7],
+                disabled: [],
 				rotationTime: 15000,
             });
 
