--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@
             	<a class="twitter-timeline" href="https://twitter.com/RodeKruis" data-widget-id="456421807545778176">Tweets by @RodeKruis</a>
 				<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);	js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
             </div>
+	    <div class="twitter">
+		<a class="twitter-timeline" href="https://twitter.com/RdRwv/lists/wmt-nrk" data-widget-id="460729960643043330">Tweets from https://twitter.com/RdRwv/lists/wmt-nrk</a>
+		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+	    </div>
             <div style="clear:both;"></div>
         </div>
         <div id="tab-2">
